# QScan

./: .gitignore  ARCHITECTURE.md  CMakeLists.txt  Dockerfile  M476DW_ESCL_INCOMPATIBILITY_ANALYSIS.md  QScan.pro  README.md  build.sh  detect_escl_scanner.py
inc/: main.hpp
inc/core/: classlogger.hpp  profilesettings.hpp  runtime_selfcheck.hpp  settingsmanager.hpp
inc/document/: document.hpp  documentexporter.hpp  pdf_importer.hpp  scannedpage.hpp
inc/gui/: mainwindow.hpp  pagelistwidget.hpp  scancontrolpanel.hpp  scannerselector.hpp  scanpreviewwidget.hpp
inc/processing/: border_detector.hpp  crop_processor.hpp  image_processor.hpp  rotate_processor.hpp  smart_capture_processor.hpp
inc/scan/: document_size.hpp  escl_compatibility_detector.hpp  escl_probe.hpp  escl_url.hpp  mobile_source.hpp  mobilesource.hpp  sanescandevice.hpp  scan_capabilities.hpp  scan_device_info.hpp  scan_manager.hpp  scan_page_info.hpp  scan_source.hpp  scancapabilities.hpp  scanmanager.hpp  scanner_backend.hpp  scanner_source.hpp  scansource.hpp  webcam_backend.hpp  webcam_source.hpp  webcamsource.hpp
resources/: qscan_icons.qrc
scripts/: Dockerfile  build-gst.sh  build-local.sh  build-qt6.sh  build.sh  create-appimage.sh
src/: core_classlogger.cpp  core_profilesettings.cpp  core_runtime_selfcheck.cpp  core_settingsmanager.cpp  document_document.cpp  document_document_exporter.cpp  document_pdf_importer.cpp  document_scanned_page.cpp  gui_mainwindow.cpp  gui_page_list_widget.cpp  gui_scan_control_panel.cpp  gui_scan_preview_widget.cpp  gui_scanner_selector.cpp  main.cpp  processing_border_detector.cpp  processing_crop_processor.cpp  processing_image_processor.cpp  processing_rotate_processor.cpp  processing_smart_capture_processor.cpp  scan_document_size.cpp  scan_escl_compatibility_detector.cpp  scan_escl_probe.cpp  scan_escl_url.cpp  scan_mobile_source.cpp  scan_sane_scan_device.cpp  scan_scan_manager.cpp  scan_scanner_backend_escl.cpp  scan_scanner_backend_sane.cpp  scan_scanner_source.cpp  scan_scanner_source_additions.cpp  scan_webcam_source.cpp  scan_webcam_source_gstreamer.cpp  scan_webcam_source_qtcamera.cpp
